# switchbot-rs

./: Cargo.toml  README.md  Taskfile.yml
.github/: dependabot.yml
.github/workflows/: rust-ci.yml  rust-publish.yml
api/: Cargo.toml  README.md
api/src/: command_request.rs  condition_expression.rs  conditional_expression.rs  device.rs  device_list.rs  help.rs  lib.rs  markdown.rs  switch_bot.rs  switch_bot_service.rs
cli/: Cargo.toml  README.md
cli/src/: aliases.rs  args.rs  cli.rs  lib.rs  main.rs  user_input.rs
hooks/: precommit.sh
