[workspace]
resolver = "3"
members = ["api", "cli"]
exclude = [".github", ".gitignore", "hooks", ".vscode"]

[workspace.package]
version = "0.1.2"
edition = "2024"
authors = ["Koji Ishii <kojiishi@gmail.com>"]
description = "Command line tool and library to interact with the SwitchBot API."
keywords = ["switchbot"]
repository = "https://github.com/kojiishi/switchbot-rs"
readme = "README.md"
license = "Apache-2.0"
