[package]
name = "switchbot-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A library to to interact with the SwitchBot API and control your SwitchBot devices programmatically."
keywords = ["switchbot"]
documentation = "https://docs.rs/switchbot-api/"
homepage = "https://github.com/kojiishi/switchbot-rs/tree/main/api"
repository.workspace = true
readme = "README.md"
license.workspace = true

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
base64 = "0.22.1"
hmac = "0.12"
log = "0.4.27"
regex = "1.11.1"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10"
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["v4"] }
