[package]
name = "switchbot-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A library to to interact with the SwitchBot API and control your SwitchBot devices programmatically."
keywords = ["switchbot"]
documentation = "https://docs.rs/switchbot-api/"
homepage = "https://github.com/kojiishi/switchbot-rs/tree/main/api"
repository.workspace = true
readme = "README.md"
license.workspace = true

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
base64 = "0.22.1"
hmac = "0.13.0"
log = "0.4.29"
regex = "1.12.3"
reqwest = { version = "0.13.3", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"
uuid = { version = "1.23.1", features = ["v4"] }
