[package]
name = "switchbot-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A command-line tool for controlling SwitchBot devices using the SwitchBot API."
keywords = ["switchbot", "cli", "command", "command-line-tool"]
documentation = "https://docs.rs/switchbot-cli/"
homepage = "https://github.com/kojiishi/switchbot-rs/tree/main/cli"
repository.workspace = true
readme = "README.md"
license.workspace = true

[[bin]]
name = "switchbot"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
clap = { version = "4.5.41", features = ["derive", "env"] }
directories = "6.0.0"
env_logger = "0.11.8"
itertools = "0.14.0"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
switchbot-api = { version = "0.1.6", path = "../api" }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
